--- a/app/html/index.html
+++ b/app/html/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <style>
-    body{ background:green;}
-  </style>
 </head>
 <body>
-  <h1>hjk</h1>
-
-  
+REACT_HTML
+<script src="http://localhost:8080/webpack-dev-server.js"></script>
 <script src="/build/bundle.js"></script>
 </body>
 </html>
